tests/test_files_pa3/errors/LogicalBinaryOpsBad.ic
class A
{
	
	static void main(string[] args) { }

	boolean ints(int x, int y)
	{
		boolean z;
		int w;
		string s;
		
		w=4;
		s="s";
		
		w = x<y;
		s = x<=y;
		z = x>y;
		z =	
			s>=y;
		
		return z;
	}
}
	
class B extends A
{
	boolean booleans(boolean x, boolean y)
	{
		boolean z;
		int w;
		string s;
		w = x && y;
		s = x || y;
		z = 
			w && y;
		z = 
			s || y;
		
		return z;
	}
}

class C extends B {}

class D
{
	boolean eq()
	{
		A a = new A();
		B b = new B();
		C c = new C();
		boolean bool;
		int w;
		string s;
		
		w = (c == a);
		
		while(a == c)
		{
			break;
		}
		

		
		
		s = (b != c);
		bool = 
			(s == c);
		bool = 
			(w != b);
		bool = (b == b);
		bool = (b != b);
		
		return bool;
	}
}